--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "fakkak-api",
   "version": "1.0.0",
   "dependencies": {
-    "youtube-transcript": "^1.2.1"
+    "youtube-captions-scraper": "^2.0.3"
   }
 }
